tests/NormalTests/paczka1/small_fuzzy/98399088.err
Error in line 2: eVJUNq A913 52,3
Error in line 6: eVJUNq A551 63,4
Error in line 5: A299 A299 60,8
Error in line 9: xgqFD7 A299 30,7
Error in line 1: Pmi1f A299 30,5
